// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Live CommentScreen should match snapshot 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "height": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#1a1a1a",
            "borderRadius": 8,
            "padding": 10,
            "shadowColor": "#ebebeb",
            "shadowRadius": 8,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "fontWeight": "900",
            }
          }
        >
          team one
        </Text>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View>
                <Text
                  style={
                    {
                      "color": "#ffd600",
                      "fontSize": 30.821917808219176,
                      "fontWeight": "900",
                    }
                  }
                >
                   pulls
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "alignSelf": undefined,
                    "bottom": undefined,
                    "end": undefined,
                    "left": undefined,
                    "position": undefined,
                    "right": undefined,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                    "start": undefined,
                    "top": undefined,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#303030",
                        "borderColor": "rgba(255, 214, 0, 0.29)",
                        "borderRadius": 4,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "flexDirection": "column",
                        "margin": 2,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "disabled": true,
                          "selected": false,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "overflow": "hidden",
                          },
                          false,
                          [
                            {
                              "borderRadius": 4,
                            },
                            {
                              "flexGrow": 1,
                            },
                          ],
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "flexGrow": 1,
                              "paddingLeft": 4,
                              "position": "relative",
                            },
                            {
                              "paddingLeft": 0,
                            },
                            {
                              "paddingRight": 0,
                            },
                          ]
                        }
                      >
                        <Text
                          ellipsizeMode="tail"
                          numberOfLines={1}
                          selectable={false}
                          style={
                            [
                              {
                                "color": "rgba(28, 27, 31, 1)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              {
                                "textAlign": "left",
                              },
                              {
                                "writingDirection": "ltr",
                              },
                              [
                                {
                                  "marginVertical": 6,
                                  "textAlignVertical": "center",
                                },
                                {
                                  "color": "#ffd600",
                                  "fontFamily": "System",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0.1,
                                  "lineHeight": 20,
                                },
                                {
                                  "marginLeft": 16,
                                  "marginRight": 16,
                                },
                                undefined,
                              ],
                            ]
                          }
                        >
                          ib
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                collapsable={false}
                style={
                  {
                    "alignSelf": undefined,
                    "bottom": undefined,
                    "end": undefined,
                    "left": undefined,
                    "position": undefined,
                    "right": undefined,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                    "start": undefined,
                    "top": undefined,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": undefined,
                        "borderColor": "rgba(121, 116, 126, 1)",
                        "borderRadius": 15.5,
                        "borderWidth": 0,
                        "elevation": 0,
                        "height": 31,
                        "margin": 6,
                        "overflow": "hidden",
                        "width": 31,
                      }
                    }
                  >
                    <View
                      accessibilityComponentType="button"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "disabled": true,
                        }
                      }
                      accessibilityTraits="button"
                      accessible={true}
                      centered={true}
                      collapsable={false}
                      focusable={true}
                      hitSlop={
                        {
                          "bottom": 6,
                          "left": 6,
                          "right": 6,
                          "top": 6,
                        }
                      }
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "overflow": "hidden",
                          },
                          false,
                          [
                            {
                              "alignItems": "center",
                              "flexGrow": 1,
                              "justifyContent": "center",
                            },
                            {
                              "borderRadius": 15.5,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        selectable={false}
                        style={
                          [
                            {
                              "color": "#ffd600",
                              "fontSize": 15,
                            },
                            [
                              {
                                "lineHeight": 15,
                                "transform": [
                                  {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              {
                                "backgroundColor": "transparent",
                              },
                            ],
                            {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                      >
                        󰆉
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <Text
                style={
                  {
                    "color": "#ffd600",
                    "fontSize": 30.821917808219176,
                  }
                }
              >
                (
                1
                )
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#1a1a1a",
            "flex": 1,
            "marginTop": 20,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1a1a1a",
              "borderBottomColor": "#ffd600",
              "borderBottomWidth": 1,
              "display": "flex",
              "flexDirection": "row",
              "padding": 5,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <TextInput
              multiline={true}
              onChangeText={[Function]}
              placeholder="Add a comment..."
              placeholderTextColor="#ababab"
              style={
                {
                  "backgroundColor": "#1a1a1a",
                  "color": "#ffd600",
                }
              }
              value=""
            />
          </View>
          <View>
            <Text
              style={
                {
                  "color": "#ffd600",
                }
              }
            >
              0
               / 
              160
            </Text>
            <View
              collapsable={false}
              style={
                {
                  "alignSelf": undefined,
                  "bottom": undefined,
                  "end": undefined,
                  "left": undefined,
                  "position": undefined,
                  "right": undefined,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                  "start": undefined,
                  "top": undefined,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#ababab",
                      "borderColor": "transparent",
                      "borderRadius": 20,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "minWidth": "auto",
                    }
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "disabled": true,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        false,
                        {
                          "borderRadius": 20,
                        },
                      ]
                    }
                    testID="button"
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "rgba(28, 27, 31, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "textAlign": "left",
                            },
                            {
                              "writingDirection": "ltr",
                            },
                            [
                              {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              {
                                "marginHorizontal": 24,
                                "marginVertical": 10,
                              },
                              {
                                "marginHorizontal": 8,
                              },
                              {
                                "textTransform": "uppercase",
                              },
                              {
                                "color": "rgba(28, 27, 31, 0.38)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        send
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <RCTScrollView
          ItemSeparatorComponent={[Function]}
          data={
            [
              {
                "comment": "Test comment",
                "commentNumber": 1,
                "user": {
                  "_id": "user1",
                  "firstName": "First1",
                  "lastName": "Last1",
                  "username": "firstlast",
                },
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={[]}
          viewabilityConfigCallbackPairs={[]}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                style={
                  {
                    "backgroundColor": "#1a1a1a",
                    "display": "flex",
                    "flexDirection": "row",
                    "padding": 20,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ababab",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    First1
                     
                    Last1
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    Test comment
                  </Text>
                </View>
                <View
                  collapsable={false}
                  style={
                    {
                      "alignSelf": undefined,
                      "bottom": undefined,
                      "end": undefined,
                      "left": undefined,
                      "position": undefined,
                      "right": undefined,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                      "start": undefined,
                      "top": undefined,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 0,
                          "width": 0,
                        },
                        "shadowOpacity": 0,
                        "shadowRadius": 0,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "backgroundColor": undefined,
                          "borderColor": "rgba(121, 116, 126, 1)",
                          "borderRadius": 20,
                          "borderWidth": 0,
                          "elevation": 0,
                          "height": 40,
                          "margin": 6,
                          "overflow": "hidden",
                          "width": 40,
                        }
                      }
                    >
                      <View
                        accessibilityComponentType="button"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "disabled": false,
                          }
                        }
                        accessibilityTraits="button"
                        accessible={true}
                        centered={true}
                        collapsable={false}
                        focusable={true}
                        hitSlop={
                          {
                            "bottom": 6,
                            "left": 6,
                            "right": 6,
                            "top": 6,
                          }
                        }
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "overflow": "hidden",
                            },
                            false,
                            [
                              {
                                "alignItems": "center",
                                "flexGrow": 1,
                                "justifyContent": "center",
                              },
                              {
                                "borderRadius": 20,
                              },
                            ],
                          ]
                        }
                      >
                        <Text
                          accessibilityElementsHidden={true}
                          allowFontScaling={false}
                          importantForAccessibility="no-hide-descendants"
                          pointerEvents="none"
                          selectable={false}
                          style={
                            [
                              {
                                "color": "#ff0000",
                                "fontSize": 24,
                              },
                              [
                                {
                                  "lineHeight": 24,
                                  "transform": [
                                    {
                                      "scaleX": 1,
                                    },
                                  ],
                                },
                                {
                                  "backgroundColor": "transparent",
                                },
                              ],
                              {
                                "fontFamily": "Material Design Icons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              {},
                            ]
                          }
                        >
                          󰅖
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Saved CommentScreen should match snapshot 1`] = `
<RCTSafeAreaView
  style={
    {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      {
        "alignSelf": "center",
        "width": "100%",
      }
    }
  >
    <View
      style={
        {
          "display": "flex",
          "height": "100%",
        }
      }
    >
      <View
        accessibilityState={
          {
            "disabled": true,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#1a1a1a",
            "borderRadius": 8,
            "padding": 10,
            "shadowColor": "#ebebeb",
            "shadowRadius": 8,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "fontWeight": "900",
            }
          }
        >
          Temper
        </Text>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "row",
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View>
                <Text
                  style={
                    {
                      "color": "#ffd600",
                      "fontSize": 30.821917808219176,
                      "fontWeight": "900",
                    }
                  }
                >
                   pulls
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "flexWrap": "wrap",
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "alignSelf": undefined,
                    "bottom": undefined,
                    "end": undefined,
                    "left": undefined,
                    "position": undefined,
                    "right": undefined,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                    "start": undefined,
                    "top": undefined,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": "#303030",
                        "borderColor": "rgba(255, 214, 0, 0.29)",
                        "borderRadius": 4,
                        "borderStyle": "solid",
                        "borderWidth": 1,
                        "flexDirection": "column",
                        "margin": 2,
                      }
                    }
                  >
                    <View
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "disabled": true,
                          "selected": false,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "overflow": "hidden",
                          },
                          false,
                          [
                            {
                              "borderRadius": 4,
                            },
                            {
                              "flexGrow": 1,
                            },
                          ],
                        ]
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "flexGrow": 1,
                              "paddingLeft": 4,
                              "position": "relative",
                            },
                            {
                              "paddingLeft": 0,
                            },
                            {
                              "paddingRight": 0,
                            },
                          ]
                        }
                      >
                        <Text
                          ellipsizeMode="tail"
                          numberOfLines={1}
                          selectable={false}
                          style={
                            [
                              {
                                "color": "rgba(28, 27, 31, 1)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              {
                                "textAlign": "left",
                              },
                              {
                                "writingDirection": "ltr",
                              },
                              [
                                {
                                  "marginVertical": 6,
                                  "textAlignVertical": "center",
                                },
                                {
                                  "color": "#ffd600",
                                  "fontFamily": "System",
                                  "fontSize": 14,
                                  "fontWeight": "500",
                                  "letterSpacing": 0.1,
                                  "lineHeight": 20,
                                },
                                {
                                  "marginLeft": 16,
                                  "marginRight": 16,
                                },
                                undefined,
                              ],
                            ]
                          }
                        >
                          ib
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
              <View
                collapsable={false}
                style={
                  {
                    "alignSelf": undefined,
                    "bottom": undefined,
                    "end": undefined,
                    "left": undefined,
                    "position": undefined,
                    "right": undefined,
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                    "start": undefined,
                    "top": undefined,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "backgroundColor": undefined,
                        "borderColor": "rgba(121, 116, 126, 1)",
                        "borderRadius": 15.5,
                        "borderWidth": 0,
                        "elevation": 0,
                        "height": 31,
                        "margin": 6,
                        "overflow": "hidden",
                        "width": 31,
                      }
                    }
                  >
                    <View
                      accessibilityComponentType="button"
                      accessibilityRole="button"
                      accessibilityState={
                        {
                          "disabled": true,
                        }
                      }
                      accessibilityTraits="button"
                      accessible={true}
                      centered={true}
                      collapsable={false}
                      focusable={true}
                      hitSlop={
                        {
                          "bottom": 6,
                          "left": 6,
                          "right": 6,
                          "top": 6,
                        }
                      }
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "overflow": "hidden",
                          },
                          false,
                          [
                            {
                              "alignItems": "center",
                              "flexGrow": 1,
                              "justifyContent": "center",
                            },
                            {
                              "borderRadius": 15.5,
                            },
                          ],
                        ]
                      }
                    >
                      <Text
                        accessibilityElementsHidden={true}
                        allowFontScaling={false}
                        importantForAccessibility="no-hide-descendants"
                        pointerEvents="none"
                        selectable={false}
                        style={
                          [
                            {
                              "color": "#ffd600",
                              "fontSize": 15,
                            },
                            [
                              {
                                "lineHeight": 15,
                                "transform": [
                                  {
                                    "scaleX": 1,
                                  },
                                ],
                              },
                              {
                                "backgroundColor": "transparent",
                              },
                            ],
                            {
                              "fontFamily": "Material Design Icons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                      >
                        󰆉
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
              <Text
                style={
                  {
                    "color": "#ffd600",
                    "fontSize": 30.821917808219176,
                  }
                }
              >
                (
                1
                )
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#1a1a1a",
            "flex": 1,
            "marginTop": 20,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1a1a1a",
              "borderBottomColor": "#ffd600",
              "borderBottomWidth": 1,
              "display": "flex",
              "flexDirection": "row",
              "padding": 5,
            }
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <TextInput
              multiline={true}
              onChangeText={[Function]}
              placeholder="Add a comment..."
              placeholderTextColor="#ababab"
              style={
                {
                  "backgroundColor": "#1a1a1a",
                  "color": "#ffd600",
                }
              }
              value=""
            />
          </View>
          <View>
            <Text
              style={
                {
                  "color": "#ffd600",
                }
              }
            >
              0
               / 
              160
            </Text>
            <View
              collapsable={false}
              style={
                {
                  "alignSelf": undefined,
                  "bottom": undefined,
                  "end": undefined,
                  "left": undefined,
                  "position": undefined,
                  "right": undefined,
                  "shadowColor": "#000",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                  "start": undefined,
                  "top": undefined,
                }
              }
            >
              <View
                collapsable={false}
                style={
                  {
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 0,
                      "width": 0,
                    },
                    "shadowOpacity": 0,
                    "shadowRadius": 0,
                  }
                }
              >
                <View
                  collapsable={false}
                  style={
                    {
                      "backgroundColor": "#ababab",
                      "borderColor": "transparent",
                      "borderRadius": 20,
                      "borderStyle": "solid",
                      "borderWidth": 0,
                      "minWidth": "auto",
                    }
                  }
                >
                  <View
                    accessibilityRole="button"
                    accessibilityState={
                      {
                        "disabled": true,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      [
                        {
                          "overflow": "hidden",
                        },
                        false,
                        {
                          "borderRadius": 20,
                        },
                      ]
                    }
                    testID="button"
                  >
                    <View
                      style={
                        [
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <Text
                        numberOfLines={1}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "rgba(28, 27, 31, 1)",
                              "fontFamily": "System",
                              "fontSize": 14,
                              "fontWeight": "500",
                              "letterSpacing": 0.1,
                              "lineHeight": 20,
                            },
                            {
                              "textAlign": "left",
                            },
                            {
                              "writingDirection": "ltr",
                            },
                            [
                              {
                                "marginHorizontal": 16,
                                "marginVertical": 9,
                                "textAlign": "center",
                              },
                              false,
                              {
                                "marginHorizontal": 24,
                                "marginVertical": 10,
                              },
                              {
                                "marginHorizontal": 8,
                              },
                              {
                                "textTransform": "uppercase",
                              },
                              {
                                "color": "rgba(28, 27, 31, 0.38)",
                                "fontFamily": "System",
                                "fontSize": 14,
                                "fontWeight": "500",
                                "letterSpacing": 0.1,
                                "lineHeight": 20,
                              },
                              undefined,
                            ],
                          ]
                        }
                      >
                        send
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <RCTScrollView
          ItemSeparatorComponent={[Function]}
          data={
            [
              {
                "comment": "Test comment",
                "commentNumber": 1,
                "user": {
                  "_id": "user1",
                  "firstName": "First1",
                  "lastName": "Last1",
                  "username": "firstast",
                },
              },
            ]
          }
          getItem={[Function]}
          getItemCount={[Function]}
          keyExtractor={[Function]}
          onContentSizeChange={[Function]}
          onLayout={[Function]}
          onMomentumScrollBegin={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={[]}
          viewabilityConfigCallbackPairs={[]}
        >
          <View>
            <View
              onLayout={[Function]}
              style={null}
            >
              <View
                style={
                  {
                    "backgroundColor": "#1a1a1a",
                    "display": "flex",
                    "flexDirection": "row",
                    "padding": 20,
                  }
                }
              >
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    style={
                      {
                        "color": "#ababab",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    First1
                     
                    Last1
                  </Text>
                  <Text
                    style={
                      {
                        "color": "#ffd600",
                        "fontSize": 30.821917808219176,
                      }
                    }
                  >
                    Test comment
                  </Text>
                </View>
                <View
                  collapsable={false}
                  style={
                    {
                      "alignSelf": undefined,
                      "bottom": undefined,
                      "end": undefined,
                      "left": undefined,
                      "position": undefined,
                      "right": undefined,
                      "shadowColor": "#000",
                      "shadowOffset": {
                        "height": 0,
                        "width": 0,
                      },
                      "shadowOpacity": 0,
                      "shadowRadius": 0,
                      "start": undefined,
                      "top": undefined,
                    }
                  }
                >
                  <View
                    collapsable={false}
                    style={
                      {
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 0,
                          "width": 0,
                        },
                        "shadowOpacity": 0,
                        "shadowRadius": 0,
                      }
                    }
                  >
                    <View
                      collapsable={false}
                      style={
                        {
                          "backgroundColor": undefined,
                          "borderColor": "rgba(121, 116, 126, 1)",
                          "borderRadius": 20,
                          "borderWidth": 0,
                          "elevation": 0,
                          "height": 40,
                          "margin": 6,
                          "overflow": "hidden",
                          "width": 40,
                        }
                      }
                    >
                      <View
                        accessibilityComponentType="button"
                        accessibilityRole="button"
                        accessibilityState={
                          {
                            "disabled": false,
                          }
                        }
                        accessibilityTraits="button"
                        accessible={true}
                        centered={true}
                        collapsable={false}
                        focusable={true}
                        hitSlop={
                          {
                            "bottom": 6,
                            "left": 6,
                            "right": 6,
                            "top": 6,
                          }
                        }
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          [
                            {
                              "overflow": "hidden",
                            },
                            false,
                            [
                              {
                                "alignItems": "center",
                                "flexGrow": 1,
                                "justifyContent": "center",
                              },
                              {
                                "borderRadius": 20,
                              },
                            ],
                          ]
                        }
                      >
                        <Text
                          accessibilityElementsHidden={true}
                          allowFontScaling={false}
                          importantForAccessibility="no-hide-descendants"
                          pointerEvents="none"
                          selectable={false}
                          style={
                            [
                              {
                                "color": "#ff0000",
                                "fontSize": 24,
                              },
                              [
                                {
                                  "lineHeight": 24,
                                  "transform": [
                                    {
                                      "scaleX": 1,
                                    },
                                  ],
                                },
                                {
                                  "backgroundColor": "transparent",
                                },
                              ],
                              {
                                "fontFamily": "Material Design Icons",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              {},
                            ]
                          }
                        >
                          󰅖
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;
